config/components/viz/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: backend.kueue-viz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kueue-viz-backend
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: frontend.kueue-viz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kueue-viz-frontend
                port:
                  number: 8080
